--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -2,8 +2,8 @@
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
     data-category="General" data-category-id="DIC_kwDOJoVSH84CXQLx" data-mapping="pathname" data-strict="1"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="dark" data-lang="zh-CN"
-    data-loading="lazy" crossorigin="anonymous" async>
+    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="preferred_color_scheme"
+    data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
 <!-- Synchronize Giscus theme with palette -->
@@ -14,7 +14,7 @@
     var palette = __md_get("__palette")
     if (palette && typeof palette.color === "object") {
         var theme = palette.color.scheme === "slate"
-            ? "transparent_dark"
+            ? "dark"
             : "light"
 
         // Instruct Giscus to set theme
@@ -28,7 +28,7 @@
             var palette = __md_get("__palette")
             if (palette && typeof palette.color === "object") {
                 var theme = palette.color.scheme === "slate"
-                    ? "transparent_dark"
+                    ? "dark"
                     : "light"
 
                 // Instruct Giscus to change theme
