--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,4 +1,5 @@
 {% if page.meta.comments %}
+<small color="gray">如果您觉得此页内容不错，您可以在下面的表情中点一个赞👍，让更多的人看到！</small>
 <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
     data-category="General" data-category-id="DIC_kwDOJoVSH84CXQLx" data-mapping="pathname" data-strict="1"
