--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,6 +1,5 @@
 {% if page.meta.comments %}
-<small color="gray">如果您觉得此页内容不错，您可以在下面的表情中点一个赞👍，让更多的人看到！</small>
-<h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
+<p align="center"><big>欢迎在评论区留下你的想法</big></p>
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
     data-category="General" data-category-id="DIC_kwDOJoVSH84CXQLx" data-mapping="pathname" data-strict="1"
     data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="preferred_color_scheme"
@@ -43,5 +42,5 @@
     })
 </script>
 <hr>
-<p align="center"><small color="gray">下面没有更多评论啦😆</small></p>
+<p align="center"><small>下面没有更多评论啦😆</small></p>
 {% endif %}
