--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,8 +1,8 @@
 {% if page.meta.comments %}
 <p align="center"><big>欢迎在评论区留下你的想法</big></p>
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
-    data-category="General" data-category-id="DIC_kwDOJoVSH84CXQLx" data-mapping="pathname" data-strict="1"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="preferred_color_scheme"
+    data-category="GitHub Pages" data-category-id="DIC_kwDOJoVSH84Cf7Nb" data-mapping="pathname" data-strict="1"
+    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
     data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
