--- a/docs/overrides/partials/header.html
+++ b/docs/overrides/partials/header.html
@@ -35,7 +35,7 @@ This file was automatically generated - do not edit
                 </div>
             </div>
         </div>
-        <audio controls="controls" loop="loop" src="./氷だらけのアイスコーヒー.mp3">
+        <audio controls="controls" loop="loop" src="./全是冰的冰咖啡.mp3" title="全是冰的冰咖啡">
         </audio>
         {% if config.theme.palette %}
         {% if not config.theme.palette is mapping %}
