--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -14,7 +14,7 @@
     var palette = __md_get("__palette")
     if (palette && typeof palette.color === "object") {
         var theme = palette.color.scheme === "slate"
-            ? "dark"  /*此处需要改成 dark，不然很难看的*/
+            ? "dark"
             : "light"
 
         // Instruct Giscus to set theme
@@ -28,7 +28,7 @@
             var palette = __md_get("__palette")
             if (palette && typeof palette.color === "object") {
                 var theme = palette.color.scheme === "slate"
-                    ? "dark"  /*此处和上面类似，需要改成 dark，不然很难看的*/
+                    ? "dark"
                     : "light"
 
                 // Instruct Giscus to change theme
