--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -2,7 +2,8 @@
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
     data-category="GitHub Pages" data-category-id="DIC_kwDOJoVSH84Cf7Nb" data-mapping="pathname" data-strict="1"
     data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
-    data-lang="zh-CN" data-loading="lazy" crossorigin="anonymous" async>
+    data-lang={% if config.theme.language=='zh' %} "zh-CN" {% elif config.theme.language=='en' %} "en" {% endif %}
+    data-loading="lazy" crossorigin="anonymous" async>
     </script>
 
 <!-- Synchronize Giscus theme with palette -->
