--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -1,3 +1,6 @@
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> 
+<!-- 不蒜子统计，放在这里防止被 material navigation.instant 选项干掉，毕竟这个文件貌似会保持更新 -->
+
 {% if page.meta.comments %}
 <script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
     data-category="GitHub Pages" data-category-id="DIC_kwDOJoVSH84Cf7Nb" data-mapping="pathname" data-strict="1"
