--- a/overrides/partials/header.html
+++ b/overrides/partials/header.html
@@ -35,7 +35,7 @@ This file was automatically generated - do not edit
                 </div>
             </div>
         </div>
-        <audio controls="controls" loop="loop" controlsList="noplaybackrate nodownload" oncontextmenu="return false"
+        <audio class="md-header__option" controls loop controlsList="noplaybackrate nodownload" oncontextmenu="return false"
             src="/tkintertools/全是冰的冰咖啡.mp3" title="全是冰的冰咖啡">
         </audio>
         {% if config.theme.palette %}
