docs: Change "tkinertools" to "maliang"

--- a/docs/overrides/partials/header.html
+++ b/docs/overrides/partials/header.html
@@ -36,7 +36,7 @@ This file was automatically generated - do not edit
             </div>
         </div>
         <audio class="md-header__option" controls loop controlsList="noplaybackrate nodownload" oncontextmenu="return false"
-            src="/tkintertools/全是冰的冰咖啡.mp3" title="全是冰的冰咖啡">
+            src="/maliang/全是冰的冰咖啡.mp3" title="全是冰的冰咖啡">
         </audio>
         {% if config.theme.palette %}
         {% if not config.theme.palette is mapping %}
