--- a/docs/overrides/partials/comments.html
+++ b/docs/overrides/partials/comments.html
@@ -1,8 +1,8 @@
-<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> 
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <!-- 不蒜子统计，放在这里防止被 material navigation.instant 选项干掉，毕竟这个文件貌似会保持更新 -->
 
 {% if page.meta.comments %}
-<script src="https://giscus.app/client.js" data-repo="Xiaokang2022/tkintertools" data-repo-id="R_kgDOJoVSHw"
+<script src="https://giscus.app/client.js" data-repo="Xiaokang2022/maliang" data-repo-id="R_kgDOJoVSHw"
     data-category="GitHub Pages" data-category-id="DIC_kwDOJoVSH84Cf7Nb" data-mapping="pathname" data-strict="1"
     data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top" data-theme="preferred_color_scheme"
     data-lang={% if config.theme.language=='zh' %} "zh-CN" {% elif config.theme.language=='en' %} "en" {% endif %}
